# par2deep

./: .gitignore  MANIFEST.in  README.md  par2deep.nsi  par2deep.py  pyproject.toml  setup.py  setup_cx.py
innosetup/: README.md
par2deep/: __init__.py  __main__.py  cli.py  gopar_lin  gopar_macos  gopar_pi  gui.py  gui_helpers.py  gui_qt.py  gui_tk.py  par2cmdline-turbo-v1.1.1-linux-amd64  par2cmdline-turbo-v1.1.1-linux-arm64  par2deep.py  toolbox.py
